--- a/index.html
+++ b/index.html
@@ -1,13 +1,89 @@
 <!DOCTYPE html>
 <html lang="pt">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script href="./libs/"></script>
-    <title>Document</title>
-</head>
-<body>
+  <head>
+    <title>Farmacil</title>
+
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, shrink-to-fit=no"
+    />
+
+    <link href='https://fonts.googleapis.com/css?family=Inter' rel='stylesheet'>
     
-</body>
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="./libs/css/bootstrap.css" />
+    <link rel="stylesheet" href="./libs/css/bootstrap.css.map" />
+
+    <!-- Bootstrap Icon CSS -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
+
+    <!-- Main CSS of project -->
+    <link rel="stylesheet" href="./css/style.css" />
+
+    <!-- Libraries -->
+    <script src="./libs/jquery-3.6.0.min.js"></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/popper.js@1.14.3/dist/umd/popper.min.js"
+    ></script>
+    <script src="./libs/js/bootstrap.bundle.js"></script>
+  </head>
+  <body>
+    <!-- <div class="container bcontent">
+    <div>
+        <h2>Bootstrap Circle Image</h2>        
+        <img src="/assets/square.png" class="rounded-circle" alt="Fox in forest" />
+    </div> -->
+    <!-- Grid Responsiva -->
+    <header>
+        <div class="menu">
+            <!-- <a href="./" class="bg-white"> -->
+                <div class="menu-link-content">
+                    <!-- <div class="bi bi-file-person-fill">123</div> -->
+                    <!-- <i class="bi bi-chat-right-text"></i> -->
+                    <a href="/" class="btn btn-link text-white"><span class="bi-chat-right-text p-1"></span>Fale Conosco</a>
+                    <a href="/" class="btn btn-link text-white"><span class="bi-chat-right-text"></span> Fale Conosco</a>
+                    <!-- <button class="btn btn-link text-white"><span class="bi-chat-right-text"></span> Fale Conosco</button> -->
+                    <button class="btn btn-outline-light"><span class="bi-file-person-fill"></span> Search</button>
+                    <button type="submit" class="btn btn-secondary"><span class="bi-search"></span> Search</button>
+                </div>
+            <!-- </a> -->
+            <button >123</button>
+            <div class="menu-group">
+                <button>456</button>
+                <button>789</button>
+            </div>
+        </div>
+        <!-- <nav class="nav-bar">
+            <div class="nav-bar-content">
+                <h1>Farmacil</h1>
+                <div class="logo">
+                    <img src="./assets/logo.png" alt="Imagem do Logo - Farmacil">
+                </div>
+            </div>
+        </nav> -->
+    </header>
+
+    <!-- <div class="container-fluid">
+        <div class="row">
+            <div class="col-12 col-sm-6 col-md-4 col-lg-2 col-xl-1 bg-primary">1</div>
+            <div class="col-12 col-sm-6 col-md-4 col-lg-2 col-xl-1 bg-danger">2</div>
+            <div class="col-12 col-sm-6 col-md-4 col-lg-2 col-xl-1 bg-warning">3</div>
+            <div class="col-12 col-sm-6 col-md-4 col-lg-2 col-xl-1 bg-info">4</div>
+            <div class="col-12 col-sm-6 col-md-4 col-lg-2 col-xl-1 bg-success">5</div>
+            <div class="col-12 col-sm-6 col-md-4 col-lg-2 col-xl-1 bg-secondary">6</div>
+            <div class="col-12 col-sm-6 col-md-4 col-lg-2 col-xl-1 bg-danger">7</div>
+            <div class="col-12 col-sm-6 col-md-4 col-lg-2 col-xl-1 bg-info">8</div>
+            <div class="col-12 col-sm-6 col-md-4 col-lg-2 col-xl-1 bg-success">9</div>
+            <div class="col-12 col-sm-6 col-md-4 col-lg-2 col-xl-1 bg-secondary">10</div>
+            <div class="col-12 col-sm-6 col-md-4 col-lg-2 col-xl-1 bg-warning">11</div>
+            <div class="col-12 col-sm-6 col-md-4 col-lg-2 col-xl-1 bg-primary">12</div>
+        </div>
+    </div> -->
+    <hr>
+    <footer>
+        123
+    </footer>
+  </body>
 </html>
