Adiciona descrição sobre o site

--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 <html lang="pt">
   <head>
     <title>Farmacil</title>
+    <meta description="description" content="A Farmacil é um PROTOTIPO de e-commerce voltado para uma farmácia digital.
+    Seu objetivo é facilitar a compra de medicamentos de forma virtual de modo propor para todos os públicos." />    
+    
 
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -38,31 +41,25 @@
     <!-- Grid Responsiva -->
     <header>
         <div class="menu">
-            <!-- <a href="./" class="bg-white"> -->
-                <div class="menu-link-content">
-                    <!-- <div class="bi bi-file-person-fill">123</div> -->
-                    <!-- <i class="bi bi-chat-right-text"></i> -->
-                    <a href="/" class="btn btn-link text-white"><span class="bi-chat-right-text p-1"></span>Fale Conosco</a>
-                    <a href="/" class="btn btn-link text-white"><span class="bi-chat-right-text"></span> Fale Conosco</a>
-                    <!-- <button class="btn btn-link text-white"><span class="bi-chat-right-text"></span> Fale Conosco</button> -->
-                    <button class="btn btn-outline-light"><span class="bi-file-person-fill"></span> Search</button>
-                    <button type="submit" class="btn btn-secondary"><span class="bi-search"></span> Search</button>
-                </div>
-            <!-- </a> -->
-            <button >123</button>
+            <div class="menu-link-content">
+                <a href="/" class="btn buttons-menu"><span class="bi-chat-right-text pr-1"></span>Fale Conosco</a>
+            </div>
             <div class="menu-group">
-                <button>456</button>
-                <button>789</button>
+                <a href="/" class="btn buttons-menu"><span class="bi-file-person-fill pr-1"></span> Entrar</a>
+                <a href="/" class="btn buttons-menu"><span class="bi-cart-dash pr-1"></span> Carrinho</a>
             </div>
         </div>
-        <!-- <nav class="nav-bar">
-            <div class="nav-bar-content">
-                <h1>Farmacil</h1>
-                <div class="logo">
-                    <img src="./assets/logo.png" alt="Imagem do Logo - Farmacil">
-                </div>
+
+        <nav class="navbar">
+            <div class="logo">
+                <img class="img-fluid" src="./assets/logo.png" alt="Imagem do Logo - Farmacil">
             </div>
-        </nav> -->
+            <div class="nav-bar-content">
+                <!-- <h1>Farmacil</h1> -->
+                
+            </div>
+        </nav>
+        123
     </header>
 
     <!-- <div class="container-fluid">
@@ -82,8 +79,8 @@
         </div>
     </div> -->
     <hr>
-    <footer>
+    <!-- <footer>
         123
-    </footer>
+    </footer> -->
   </body>
 </html>
