--- a/index.html
+++ b/index.html
@@ -65,7 +65,6 @@
 
     <section class="section-show-products">
         <h2>Mais Vendidos</h2>
-        -- Adicionar o carrossel aqui
         <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
             <ol class="carousel-indicators">
                 <li data-target="#carouselExampleControls" data-slide-to="0" class="active"></li>
@@ -115,42 +114,54 @@
                     <img src="assets/remedios/vick-vapoRub.jpg" alt="Vick - VapoRub - 10mg" />
                     <div className="medicine-card-bottom-container">
                         <h4>Vick - VapoRub - 10mg</h4>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                        <p>Descrição: Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                        <b>Preço: R$ 15,85</b><br/>
+                        <button class="btn btn-primary btn-lg btn-sm btn-xs m-2"><span class="bi-cart-fill pr-1"></span>ADICIONAR</button>
                     </div>
                 </div>
                 <div class="card-container col-sm-6 col-lg-4 col-xl-3 mb-3">
                     <img src="assets/remedios/clavulin-bd-comprimido-875mg-125mg-caixa-com-20-comprimidos-revestidos.jpg" alt="Clavulin bd comprimido - 125mg - caixa com 20 comprimidos" />
                     <div className="medicine-card-bottom-container">
                         <h4>Clavulin bd comprimido - 125mg - caixa com 20 comprimidos</h4>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                        <p>Descrição: Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                        <b>Preço: R$ 71,97</b><br/>
+                        <button class="btn btn-primary btn-lg btn-sm btn-xs m-2"><span class="bi-cart-fill pr-1"></span>ADICIONAR</button> 
                     </div>
                 </div>
                 <div class="card-container col-sm-6 col-lg-4 col-xl-3 mb-3">
                     <img src="assets/remedios/dipirona-monoidratada-500mg-com-30-comprimidos-generico.jpg" alt="Dipirona monoidratada - 500mg - 30 comprimidos" />
                     <div className="medicine-card-bottom-container">
                         <h3>Dipirona monoidratada - 500mg - 30 comprimidos</h3>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                        <p>Descrição: Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                        <b>Preço: R$ 23,54</b><br/>
+                        <button class="btn btn-primary btn-lg btn-sm btn-xs m-2"><span class="bi-cart-fill pr-1"></span>ADICIONAR</button>
                     </div>
                 </div>
                 <div class="card-container col-sm-6 col-lg-4 col-xl-3 mb-3">
                     <img src="assets/remedios/leite-de-magnesia-philips-1200mg-15ml-sabor-hortela-c-350-ml-3dd.jpg" alt="Leite de Magnesia - Phillips - 1214.25mg - 35ml" />
                     <div className="medicine-card-bottom-container">
                         <h3>Leite de Magnesia - Phillips - 1214.25mg - 35ml</h3>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                        <p>Descrição: Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                        <b>Preço: R$ 18,37</b><br/>
+                        <button class="btn btn-primary btn-lg btn-sm btn-xs m-2"><span class="bi-cart-fill pr-1"></span>ADICIONAR</button> 
                     </div>
                 </div>
                 <div class="card-container col-sm-6 col-lg-4 col-xl-3 mb-3">
                     <img src="assets/remedios/simeticona-75mg-ml-com-15ml_-4.jpg" alt="Simeticona - 75mg" />
                     <div className="medicine-card-bottom-container">
                         <h3>Simeticona - 75mg</h3>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                        <p>Descrição: Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                        <b>Preço: R$ 5,95</b><br/>
+                        <button class="btn btn-primary btn-lg btn-sm btn-xs m-2"><span class="bi-cart-fill pr-1"></span>ADICIONAR</button> 
                     </div>
                 </div>
                 <div class="card-container col-sm-6 col-lg-4 col-xl-3 mb-3">
                     <img src="assets/remedios/xarope-frenoTosse- gaiofenesina.jpg" alt="Xarope - FrenoTosse - 13.33 mg/ml" />
                     <div className="medicine-card-bottom-container">
                         <h3>Xarope - FrenoTosse - 13.33 mg/ml</h3>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                        <p>Descrição: Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                        <b>Preço: R$ 15,32</b><br />
+                        <button class="btn btn-primary btn-lg btn-sm btn-xs m-2"><span class="bi-cart-fill pr-1"></span>ADICIONAR</button>
                     </div>
                 </div>
             </div>
@@ -162,49 +173,26 @@
                     <img src="assets/remedios/novalgina_1g_10cpr.jpg" alt="Novalgina - 1g - 10 comprimidos" />
                     <div className="medicine-card-bottom-container">
                         <h4>Novalgina - 1g - 10 comprimidos</h4>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                        <p>Descrição: Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                        <b>Preço: R$ 23,54</b><br/>
+                        <button class="btn btn-primary btn-lg btn-sm btn-xs m-2"><span class="bi-cart-fill pr-1"></span>ADICIONAR</button>
                     </div>
                 </div>
                 <div class="card-container col-sm-6 col-lg-4 col-xl-3 mb-3">
                     <img src="assets/remedios/omeprazol.jpg" alt="Omeprazol - 40mg - 28 comprimidos" />
                     <div className="medicine-card-bottom-container">
                         <h4>Omeprazol - 40mg - 28 comprimidos</h4>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                        <p>Descrição: Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                        <b>Preço: R$ 42,17</b><br/>
+                        <button class="btn btn-primary btn-lg btn-sm btn-xs m-2"><span class="bi-cart-fill pr-1"></span>ADICIONAR</button>
                     </div>
                 </div>
             </div>
         </div>
-
-
-
-        
-
-          <!-- <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
-            <div class="carousel-inner">
-              <div class="carousel-item active">
-                <img src="./assets/remedios/omeprazol.jpg" class="d-block" alt="teste1">
-              </div>
-              <div class="carousel-item">
-                <img src="./assets/remedios/clavulin-bd-comprimido-875mg-125mg-caixa-com-20-comprimidos-revestidos.jpg" class="d-block" alt="teste2">
-              </div>
-              <div class="carousel-item">
-                <img src="./assets/remedios/dipirona-monoidratada-500mg-com-30-comprimidos-generico.jpg" class="d-block w-5" alt="teste3">
-              </div>
-            </div>
-            <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
-                <span class="carousel-control-prev-icon" style="background-color: black; color:black;" aria-hidden="false"></span>
-                <span class="sr-only">Previous</span>
-            </a>
-            <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
-                <span class="carousel-control-next-icon" style="background-color: black; color:black;" aria-hidden="true"></span>
-                <span class="sr-only">Next</span>
-            </a>
-          </div> -->
-        
     </section>
 
     <footer class="footer">
-        RODAPÉ DA PÁGINA - COPYRIGHT - 2022
+        RODAPÉ DA PÁGINA - FARMACIL - 2022
     </footer>
   </body>
 </html>
